# lightning-sam

./: .gitignore  .gitmodules  README.md  config.py  convert_segmentation_masks_to_coco.py  dataset.py  inference.py  pyproject.toml  requirements.txt  train.py
configs/: coco2017.json
finetune_sam/: config.py  dataset.py  model.py  train.py  utils.py  val.py
lightning_sam/: config.py  dataset.py  losses.py  model.py  train.py  utils.py
results/: res_ep10.json  res_ep20.json
small_coco/: coco.json
src/: config.py  dataset.py  losses.py  model.py  train.py  utils.py
